# movie_analyzer

./: LICENSE  README.md  movie_analyzer.ipynb  pyproject.toml  results.json  unittest_movie_analyzer.py
