[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MovieAnalyzer"
authors = [{name = "Mitsosg10", email = "mitsospapakonstantinou96@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/mitsosg10/movie_analyzer"
